--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.23.1
 matplotlib==3.5.2
 numpy==1.23.5
-opencv-python==4.7.0.72
-freeglut3
+opencv-python-headless==4.7.0.72
 pyvirtualdisplay
 xvfbwrapper
+opencv-python==4.7.0.72
+
